--- a/params.yaml
+++ b/params.yaml
@@ -3,13 +3,12 @@ TrainingArguments:
   warmup_steps: 500
   per_device_train_batch_size: 1
   weight_decay: 0.01
-  logging_steps: 10
+  logging_steps: 50
   evaluation_strategy: steps
-  eval_steps: 500
+  eval_steps: 1000
   save_steps: 1e6
-  gradient_accumulation_steps: 16
-
-
+  gradient_accumulation_steps: 2
+  fp: True
 
 
 
